fix text alignment on menu

--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -14,6 +14,7 @@
     cursor: pointer;
 }
 .hr-border {
+    margin: 0;
     border: 0;
     border-top: groove #800 10px;
 }
